ecmascript/parser/tests/test262-error-references/fail/15de970e269ae56f.js.stderr
error: TS2406
 --> $DIR/tests/test262-parser/fail/15de970e269ae56f.js:1:1
  |
1 | (1 + 1) = 10
  | ^^^^^^^

